argocd/apps/lakshmi/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-to-lakshmi-secrets
  namespace: lakshmi
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy-gateway-system
  to:
    - group: ""
      kind: Secret
      name: lakshmi-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lakshmi-redirect
  namespace: lakshmi
spec:
  parentRefs:
    - name: public-gateway
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - "lakshmi.k8s.sudhanva.me"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lakshmi-route
  namespace: lakshmi
spec:
  parentRefs:
    - name: public-gateway
      namespace: envoy-gateway-system
      sectionName: https-lakshmi
  hostnames:
    - "lakshmi.k8s.sudhanva.me"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: lakshmi-server
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /admin
      backendRefs:
        - name: lakshmi-server
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /static
      backendRefs:
        - name: lakshmi-server
          port: 8000
    - matches:
        - path:
            type: PathPrefix
            value: /docs
      backendRefs:
        - name: lakshmi-docs
          port: 80
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: lakshmi-client
          port: 80
